--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# credentials.json
+# settings.py
+db.sqlite3
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -54,8 +58,8 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-settings.py
-db.sqlite3
+
+
 email_info.py
 
 
